--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>NgGinger</title>
+  <title>GingerClub</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700|Delius+Swash+Caps" rel="stylesheet">
+
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-top-header></app-top-header>
+  <app-ginger></app-ginger>
 </body>
+
 </html>
